// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmployeeDetailsModal > snapshot > matches snapshot for a full-time employee 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="employee-details-title"
    aria-modal="true"
    class="modal-overlay"
    role="dialog"
  >
    <div
      class="modal employee-details-modal"
    >
      <div
        class="modal__header"
      >
        <h2
          class="modal__title"
          id="employee-details-title"
        >
          Employee Details
        </h2>
        <button
          aria-label="Close"
          class="modal__close"
        >
          ✕
        </button>
      </div>
      <div
        class="employee-details__hero"
      >
        <div
          class="employee-details__avatar"
        >
          AJ
        </div>
        <div>
          <h3
            class="employee-details__name"
          >
            Alice Johnson
          </h3>
          <p
            class="employee-details__job-title"
          >
            Software Engineer
          </p>
          <span
            class="badge badge--full-time"
          >
            full-time
          </span>
        </div>
      </div>
      <dl
        class="employee-details__grid"
      >
        <div
          class="employee-details__field"
        >
          <dt
            class="employee-details__label"
          >
            Department
          </dt>
          <dd
            class="employee-details__value"
          >
            Engineering
          </dd>
        </div>
        <div
          class="employee-details__field"
        >
          <dt
            class="employee-details__label"
          >
            Country
          </dt>
          <dd
            class="employee-details__value"
          >
            USA
          </dd>
        </div>
        <div
          class="employee-details__field"
        >
          <dt
            class="employee-details__label"
          >
            Salary
          </dt>
          <dd
            class="employee-details__value employee-details__value--salary"
          >
            $120,000
          </dd>
        </div>
        <div
          class="employee-details__field"
        >
          <dt
            class="employee-details__label"
          >
            Hire Date
          </dt>
          <dd
            class="employee-details__value"
          >
            March 15, 2021
          </dd>
        </div>
        <div
          class="employee-details__field"
        >
          <dt
            class="employee-details__label"
          >
            Employee ID
          </dt>
          <dd
            class="employee-details__value"
          >
            #42
          </dd>
        </div>
      </dl>
      <div
        class="modal__actions"
      >
        <button
          class="btn btn--primary"
          type="button"
        >
          Edit Employee
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmployeeDetailsModal > snapshot > matches snapshot when department is null 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="employee-details-title"
    aria-modal="true"
    class="modal-overlay"
    role="dialog"
  >
    <div
      class="modal employee-details-modal"
    >
      <div
        class="modal__header"
      >
        <h2
          class="modal__title"
          id="employee-details-title"
        >
          Employee Details
        </h2>
        <button
          aria-label="Close"
          class="modal__close"
        >
          ✕
        </button>
      </div>
      <div
        class="employee-details__hero"
      >
        <div
          class="employee-details__avatar"
        >
          AJ
        </div>
        <div>
          <h3
            class="employee-details__name"
          >
            Alice Johnson
          </h3>
          <p
            class="employee-details__job-title"
          >
            Software Engineer
          </p>
          <span
            class="badge badge--full-time"
          >
            full-time
          </span>
        </div>
      </div>
      <dl
        class="employee-details__grid"
      >
        <div
          class="employee-details__field"
        >
          <dt
            class="employee-details__label"
          >
            Department
          </dt>
          <dd
            class="employee-details__value"
          >
            —
          </dd>
        </div>
        <div
          class="employee-details__field"
        >
          <dt
            class="employee-details__label"
          >
            Country
          </dt>
          <dd
            class="employee-details__value"
          >
            USA
          </dd>
        </div>
        <div
          class="employee-details__field"
        >
          <dt
            class="employee-details__label"
          >
            Salary
          </dt>
          <dd
            class="employee-details__value employee-details__value--salary"
          >
            $120,000
          </dd>
        </div>
        <div
          class="employee-details__field"
        >
          <dt
            class="employee-details__label"
          >
            Hire Date
          </dt>
          <dd
            class="employee-details__value"
          >
            March 15, 2021
          </dd>
        </div>
        <div
          class="employee-details__field"
        >
          <dt
            class="employee-details__label"
          >
            Employee ID
          </dt>
          <dd
            class="employee-details__value"
          >
            #42
          </dd>
        </div>
      </dl>
      <div
        class="modal__actions"
      >
        <button
          class="btn btn--primary"
          type="button"
        >
          Edit Employee
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
